--- a/octoprint_mrbeam/templates/settings/custom_material_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/custom_material_settings.jinja2
@@ -3,7 +3,7 @@
 
     <div class="scrollable" style="padding-bottom:2em; overflow-y: auto; height: calc(100vh - 150px);">
 
-        <div class="show_only_online">
+        <div class="show_only_online" data-test="custom-material-learn-how">
             {{ _("To learn how to create, use, and manage custom material settings, read this %(opening_tag)sKnowledge Base article%(closing_tag)s.",
                     opening_tag='<a href="https://mr-beam.freshdesk.com/support/solutions/articles/43000431865-save-custom-material-settings" target="_blank"><i class="icon-external-link"></i>&nbsp;',
                     closing_tag='</a>') }}
