--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -17,14 +17,15 @@
 
                 <div id="material_type" data-bind="css: {active : selected_material() === null}">
                     <div id="material_burger_menu" class="dropdown pull-right">
-                        <a id="materials_manage" href="#"
+                        <a id="materials_manage" data-test="custom-material-materials-manage" href="#"
                            data-bind="click: function(){ $('#material_type').addClass('manage'); }"
                            style="text-decoration: none;">
                             <i class="icon-edit icon-large"></i>&nbsp;{{ _('Manage materials') }}
                         </a>
                         <a id="materials_manage_done" href="#"
                            data-bind="click: function(){ $('#material_type').removeClass('manage'); }"
-                           style="text-decoration: none;">
+                           style="text-decoration: none;"
+                           data-test="custom-material-done">
                             <i class="icon-ok icon-large"></i>&nbsp; {{ _('Done') }}
                         </a>
                         <div>
@@ -51,8 +52,9 @@
                                        data-bind="value: filterQuery, valueUpdate: 'input'"
                                        placeholder="{{ _('Search...') }}">
                             </form>
-                            <ul id="material_list" data-bind="foreach: filteredMaterials">
+                            <ul id="material_list" data-bind="foreach: filteredMaterials" data-test="conversion-dialog-material-list">
                                 <li class='material_entry hover_shadow'
+                                    data-test="conversion-dialog-material-item"
                                     data-bind="click: function(vm, event){$root.set_material($data, event); $root.moveJobsToEngravingDefaultOption($data)},
 												style: { backgroundImage: 'url(\'' + ($data.img || '/plugin/mrbeam/static/img/materials/custommaterial.png') + '\')' },
 												css: {selected: $root.selected_material() === $data, custom: $data.custom === true, compatible_material: $data.compatible === true, incompatible_material: $data.compatible === false },
@@ -76,7 +78,7 @@
                                 <b>{{ _('Select a color close to the material\'s color to improve the result.') }}</b>">
                         <label>{{ _('Color') }}</label>
                         <ul id="color_list" data-bind="foreach: material_colors">
-                            <li class='material_color_entry hover_shadow' data-bind="
+                            <li class='material_color_entry hover_shadow' data-test="conversion-dialog-material-color" data-bind="
 								click: function(vm, event){ $root.set_material_color($data, event); $root.moveJobsToEngravingColorDefaultOption($data)},
 								attr: {id: 'material_color_'+$data },
 								css: {active: $data === $root.selected_material_color() },
@@ -94,7 +96,7 @@
                                     {{ _('When cutting the material it is important to tell Mr Beam the thickness so that it can select the correct laser settings.') }}">
                         <label>{{ _('Thickness') }}</label>
                         <div id="thickness_list" data-bind="foreach: material_thicknesses">
-                            <div class="thickness_sample hover_shadow"
+                            <div class="thickness_sample hover_shadow" data-test="conversion-dialog-thickness-sample"
                                  data-bind="
 										click: function(vm, event){ $root.set_material_thickness($data, event); $root.moveJobsToEngravingEngraveModeSelected($data)},
 										attr: {id: 'material_thickness_'+$data.thicknessMM },
@@ -216,7 +218,8 @@
                             <h6 style="font-weight: normal;">
                                 <a class="show_only_online"
                                    href="https://support.mr-beam.org/support/solutions/articles/43000562372-laser-parameters"
-                                   target="_blank">
+                                   target="_blank"
+                                   data-test="conversion-dialog-help">
                                     <i class="icon-external-link"></i> {{ _('Help') }}
                                 </a>
                                 <a class="show_only_offline" href="#"
@@ -247,6 +250,7 @@
                 <div id="engrave_job" class="job_row row-fluid">
                     <div class="span3" style="display:flex;">
                         <div id="engrave_job_drop_zone_conversion_dialog"
+                             data-test="conversion-dialog-engrave-job-zone"
                              class="assigned_colors img_drop_zone color_drop_zone"
                              ondragover="window.mrbeam.colorDragging.colorAllowDrop(event)"
                              ondrop="window.mrbeam.colorDragging.colorDrop(event)">
@@ -274,11 +278,13 @@
                                         <div class="input-append">
                                             <input id="svgtogcode_img_intensity_white"
                                                    class="img_intensity_input percentage_input" type="number"
-                                                   data-bind="value: imgIntensityWhite, event: {change: flag_customized_material}">
+                                                   data-bind="value: imgIntensityWhite, event: {change: flag_customized_material}"
+                                                   data-test="conversion-dialog-intensity-white">
                                             <div class="svgtogcode_grayscale">&nbsp;</div>
                                             <input id="svgtogcode_img_intensity_black"
                                                    class="img_intensity_input percentage_input" type="number"
-                                                   data-bind="value: imgIntensityBlack, event: {change: flag_customized_material}">
+                                                   data-bind="value: imgIntensityBlack, event: {change: flag_customized_material}"
+                                                   data-test="conversion-dialog-intensity-black">
                                         </div>
                                         &nbsp;%
                                     </div>
@@ -295,11 +301,13 @@
                                         <div class="input-append">
                                             <input id="svgtogcode_img_feedrate_white"
                                                    class="img_intensity_input speed_input" type="number"
-                                                   data-bind="value: imgFeedrateWhite, event: {change: flag_customized_material}">
+                                                   data-bind="value: imgFeedrateWhite, event: {change: flag_customized_material}"
+                                                   data-test="conversion-dialog-feedrate-white">
                                             <div class="svgtogcode_grayscale">&nbsp;</div>
                                             <input id="svgtogcode_img_feedrate_black"
                                                    class="img_intensity_input speed_input" type="number"
-                                                   data-bind="value: imgFeedrateBlack, event: {change: flag_customized_material}">
+                                                   data-bind="value: imgFeedrateBlack, event: {change: flag_customized_material}"
+                                                   data-test="conversion-dialog-feedrate-black">
                                         </div>
                                         &nbsp;{{ _('mm/min') }}
                                     </div>
@@ -343,7 +351,8 @@
                                     <label class="control-label">{{ _('Passes') }}</label>
                                     <div class="controls">
                                         <input data-bind="value: engravingPasses, event: {change: flag_customized_material}"
-                                               class="passes_input engrave_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
+                                               class="passes_input engrave_passes_input" type="number"
+                                               data-test="conversion-dialog-passes-input-engrave"/>&nbsp;&times;&nbsp;&nbsp;
                                     </div>
                                 </div>
                             </div>
@@ -358,7 +367,8 @@
                                     <div class="controls">
                                         <input id="parameter_assignment_pierce_time_in"
                                                data-bind="value: engravingPiercetime, event: {change: flag_customized_material}"
-                                               class="param_piercetime decimal_input pierce_time_input" type="number"/>&nbsp;{{ _('ms') }}
+                                               class="param_piercetime decimal_input pierce_time_input" type="number"
+                                               data-test="conversion-dialog-engraving-pierce-time"/>&nbsp;{{ _('ms') }}
                                     </div>
                                 </div>
                                 <div class="input-control-and-label" data-toggle="tooltip" data-placement="right"
@@ -368,7 +378,8 @@
                                     <div class="controls"><input id="svgtogcode_img_line_dist"
                                                                  class="decimal_input line_distance_input" type="number"
                                                                  step="0.05"
-                                                                 data-bind="value: beamDiameter"/>&nbsp;{{ _('mm') }}
+                                                                 data-bind="value: beamDiameter"
+                                                                 data-test="conversion-dialog-line-distance-input"/>&nbsp;{{ _('mm') }}
                                     </div>
                                 </div>
 
@@ -397,7 +408,8 @@
                                             <button type="button" value="precise"
                                                     id="parameter_assignment_engraving_mode_precise_btn"
                                                     data-bind="event: {click: updateEngravingMode}"
-                                                    class="btn btn-default active">{{ _('Recommended') }}</button>
+                                                    class="btn btn-default active">{{ _('Recommended') }}
+                                                    data-test="conversion-dialog-engraving-mode-recommended"</button>
                                             {# TODO: SW-1447 #}
                                             {#<button type="button" value="fast"
                                                     id="parameter_assignment_engraving_mode_fast_btn"
@@ -406,7 +418,8 @@
                                             <button type="button" value="basic"
                                                     id="parameter_assignment_engraving_mode_basic_btn"
                                                     data-bind="event: {click: updateEngravingMode}"
-                                                    class="btn btn-default">{{ _('Basic') }}</button>
+                                                    class="btn btn-default">{{ _('Basic') }}
+                                                    data-test="conversion-dialog-engraving-mode-basic"</button>
                                         </div>
                                     </div>
 
@@ -420,7 +433,7 @@
                                     <div class="controls">
                                         <label class="checkbox">
                                             <input type="checkbox"
-                                                   data-bind="checked: imgDithering, event: {change: flag_customized_material}"/>{{ _('Dithering') }}
+                                                   data-bind="checked: imgDithering, event: {change: flag_customized_material}" data-test="conversion-dialog-line-dithering"/>{{ _('Dithering') }}
                                         </label>
                                     </div>
                                 </div>
@@ -502,7 +515,8 @@
                                     <div class="controls"><input
                                             class="param_intensity img_intensity_input percentage_input" type="number"
                                             data-bind="event: {change: flag_customized_material}"
-                                            onblur="window.mrbeam.colorDragging.checkConversionParameters()"/>&nbsp;%
+                                            onblur="window.mrbeam.colorDragging.checkConversionParameters()"
+                                            data-test="conversion-dialog-cut-intensity-input"/>&nbsp;%
                                     </div>
                                 </div>
                             </div>
@@ -516,7 +530,8 @@
                                     <label class="control-label">{{ _('Speed') }}</label>
                                     <div class="controls"><input class="param_feedrate speed_input" type="number"
                                                                  data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                                                 onblur="window.mrbeam.colorDragging.checkConversionParameters()"/>&nbsp;{{ _('mm/min') }}
+                                                                 onblur="window.mrbeam.colorDragging.checkConversionParameters()"
+                                                                 data-test="conversion-dialog-cut-feedrate-input"/>&nbsp;{{ _('mm/min') }}
                                     </div>
                                 </div>
                             </div>
@@ -531,7 +546,8 @@
                                         <div class="compressor_control">
                                             <span class="compressor_min_max_label">min</span>
                                             <input class="mrb_slider param_cut_compressor compressor_input" type="range"
-                                                   value="3" data-bind="event: {change: flag_customized_material}"/>
+                                                   value="3" data-bind="event: {change: flag_customized_material}"
+                                                   data-test="conversion-dialog-cut-compressor-input"/>
                                             <span class="compressor_min_max_label">max</span>
                                         </div>
                                     </div>
@@ -552,12 +568,13 @@
                                     <div class="controls">
                                         <input
                                             data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                            class="param_passes passes_input cut_passes_input" type="number"/>&nbsp;&times;&nbsp;&nbsp;
+                                            class="param_passes passes_input cut_passes_input" type="number" data-test="conversion-dialog-cut-passes-input"/>&nbsp;&times;&nbsp;&nbsp;
                                         <span style="display: inline-block">
                                             <label data-bind="visible: showExpertSettings">
                                                 <input
                                                     data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
-                                                    type="checkbox" class="param_progressive"/>
+                                                    type="checkbox" class="param_progressive"
+                                                    data-test="conversion-dialog-progressive"/>
                                                 {{ _('progressive') }}
                                             </label>
                                         </span>
@@ -575,7 +592,8 @@
                                     <div class="controls"><input
                                                             data-bind="event: {change: function(){flag_customized_material(); recalcJobTime();}}"
                                                             class="param_piercetime pierce_time_input"
-                                                            type="number"/>&nbsp;{{ _('ms') }}</div>
+                                                            type="number"
+                                                            data-test="conversion-dialog-cut-piercetime-input"/>&nbsp;{{ _('ms') }}</div>
                                 </div>
                             </div>
                         </form>
@@ -629,13 +647,13 @@
         <div class="pull-left" style="text-align:left;" data-bind="visible: !slicing_in_progress()">
             <label class="checkbox">
                 <input type="checkbox" id="parameter_assignment_show_advanced_settings_cb"
-                       data-bind="checked: showExpertSettings">{{ _('show advanced settings') }}
+                       data-bind="checked: showExpertSettings" data-test="conversion-dialog-show-advanced-settings">{{ _('show advanced settings') }}
             </label>
         </div>
 
         <a href="#" class="btn" aria-hidden="true"
-           data-bind="click: $root.cancel_conversion(), visible: !slicing_in_progress()">{{ _('Back') }}</a>
-        <a href="#" class="btn btn-primary" id="start_job_btn" data-cy=”laser-job-start-button”
+           data-bind="click: $root.cancel_conversion(), visible: !slicing_in_progress()" data-test="laser-job-back-button">{{ _('Back') }}</a>
+        <a href="#" class="btn btn-primary" id="start_job_btn" data-test="laser-job-start-button"
            data-bind="click: function() { if ($root.enableConvertButton()) { $root.convert() } },
 					enabled: enableConvertButton,
 					visible: !slicing_in_progress(),
@@ -645,7 +663,7 @@
     <div id="empty_job_modal" class="modal hide fade" tabindex="-1" role="dialog"
          aria-labelledby="empty_job_label" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" data-test="conversion-dialog-settings-to-be-adjusted">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                     <h3 id="empty_job_label">{{ _('Settings to be adjusted') }}</h3>
@@ -661,7 +679,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Ok') }}</button>
+                    <button class="btn" data-dismiss="modal" aria-hidden="true" data-test="conversion-dialog-settings-to-be-adjusted-btn">{{ _('Ok') }}</button>
                 </div>
             </div>
         </div>
